--- a/aplicacion/almacenardatos/miDockerfile/kafka-to-mysql.properties
+++ b/aplicacion/almacenardatos/miDockerfile/kafka-to-mysql.properties
@@ -6,5 +6,6 @@ connection.url=jdbc:mysql://mi-mysql:3306/aplicacionkafka
 connection.user=root
 connection.password=1234
 auto.create=true
-insert.mode=insert
-pk.mode=none
+insert.mode=upsert
+pk.mode=record_value
+pk.fields=id,idSeccond
